--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+
 <!-- Global Site Tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-106541861-1"></script>
 <script>
@@ -48,15 +49,11 @@ body {
 html {
 	background-color: #000000;
 }
-
-.preview img {
-  width: 70%;
-  height: 70%
-}
 </style>
+
 </head>
 
-<ul>
+<div class="sidenav"> 
   <li><a href="me.html">me</a></li>
   <li><a href="personal.html">film - personal</a></li>
   <li><a href="professional.html">film - professional</a></li>
@@ -66,21 +63,21 @@ html {
   <li><a target="_blank" href="Ben Cowper | resume.pdf">resume</a></li>
   <li><a target="_blank" href="https://linkedin.com/in/bencowper">linkedin</a></li>
   <li><a target="_blank" href="https://vimeo.com/bencowper">vimeo</a></li>
-</ul>
+</div>
 
 <footer>All content Copyright Ben Cowper, 2017</footer>
 
 <body>
 
-<div style="margin-left:17%;">
+<div class="main">
 
 <hr color="#50A8AF">
 <h2>Ben Cowper</h2>
 <hr color="#50A8AF">
 <br>
 
-<div class="gallery" align="center">
- <div class="preview" align="center">
+<div class="gallery">
+ <div class="preview">
   <a href="me.html"><img name="preview" src="images/Snowflake.jpg" alt="Snowflake"/></a>
  </div>
 </div>
