--- a/me.html
+++ b/me.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-	<!-- Global Site Tag (gtag.js) - Google Analytics -->
+<!-- Global Site Tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-106541861-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -11,8 +11,6 @@
 
   gtag('config', 'UA-106541861-1');
 </script>
-
-<meta name=viewport content="width=device-width, initial-scale=1">
 
 <title>Ben Cowper | me</title>
 <link rel="stylesheet" href="styles.css">
@@ -42,13 +40,12 @@
 <style type="text/css">
 .preview img {
   width: 30%;
-  height: 30%;
 }
 </style>
 
 </head>
 
-<ul>
+<div class="sidenav"> 
   <li><a class="active" href="me.html">me</a></li>
   <li><a href="personal.html">film - personal</a></li>
   <li><a href="professional.html">film - professional</a></li>
@@ -58,13 +55,13 @@
   <li><a target="_blank" href="Ben Cowper | resume.pdf">resume</a></li>
   <li><a target="_blank" href="https://linkedin.com/in/bencowper">linkedin</a></li>
   <li><a target="_blank" href="https://vimeo.com/bencowper">vimeo</a></li>
-</ul>
+</div>
 
 <footer>All content Copyright Ben Cowper, 2017</footer>
 
 <body>
 
-<div style="margin-left:17%;">
+<div class="main">
 
 <hr color="#50A8AF">
 <h2>Ben Cowper</h2>
@@ -72,11 +69,15 @@
 <hr color="#50A8AF">
 <br>
 
-<div class="gallery" align="center">
- <div class="preview" align="center">
+<div class="gallery">
+ <div class="preview">
   <img name="preview" src="images/Ben_Cowper.jpg" alt="Ben Cowper"/>
  </div>
 </div>
+
+<br>
+
+<div style="margin-left: 3%; margin-right: 3%;">
 
 <p>
 In 2016 I received a Bachelor of Arts in Cinematography and Editing from Hampshire College. I have always loved working with video, and began producing professional work as early as 2007. Since then, I have filmed and edited over 100 projects for a wide variety of individuals, artists, and commercial clients including: Yale University, Hampshire College, Mount Holyoke College, PBS <i>American Masters</i>, Cambridge University Press, ServiceNet, Northampton Chamber of Commerce, Beehive Sewing, and the Global Fibrosis Foundation.
@@ -110,13 +111,15 @@ I am highly skilled in the following roles:
   Installation and live switching of audio and video streams for television, theatre, and conferences
 </p>
 
+</div>
+
 <br>
 
 <hr color="#af5750">
 
-<div id="contentBox" style="margin:0% auto; width:100%">
+<div class="columns">
 
-	<div id="column1" style="float:left; margin:auto; padding: 1%; width:30%;">
+	<div class="column">
 		<h3>Film</h3>
 		<h4>Holding Hands with Ilse (2017)</h4>
 		<p>Subtitling, Audio Mixing, Post Production Assistant</p>
@@ -143,7 +146,7 @@ I am highly skilled in the following roles:
 		<p>Camera Operator - Friend's thesis film at Hampshire College</p>
 	</div>
 
-	<div id="column2" style="float:left; margin:auto; padding: 1%; width:30%;">
+	<div class="column">
 		<h3>Teaching</h3>
 		<h4>Media Alumni Fellow (2017)
 		<br>
@@ -180,8 +183,7 @@ I am highly skilled in the following roles:
 		<p>Advanced Digital Video</p>
     </div>
 
-	<div id="column3" style="float:left; margin:auto; padding: 1%; width:30%">
-
+	<div class="column">
 		<h3>Web, Graphics, Coding</h3>
 		<h4><a target="_blank" href="https://www.becominghelenkeller.org">Becoming Helen Keller</a></h4>
 		<p>Web Design, Graphics - Squarespace, CSS, HTML, Photoshop</p>
