--- a/photo.html
+++ b/photo.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-  <!-- Global Site Tag (gtag.js) - Google Analytics -->
+<!-- Global Site Tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-106541861-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -38,25 +38,14 @@
 <meta name="msapplication-config" content="icons/browserconfig.xml">
 
 <style type="text/css">
-
-.thumbnails img {
-  height: 80px;
-  border: 2px solid #eeeeee;
-  margin: 0 2px 2px 0;
-}
-
-.thumbnails img:hover {
-  border: 2px solid #af5750;
-  cursor:pointer;
-}
-
-.preview img {
-  width: 800px;
+p {
+  text-align: center;
 }
 </style>
+
 </head>
 
-<ul>
+<div class="sidenav"> 
   <li><a href="me.html">me</a></li>
   <li><a href="personal.html">film - personal</a></li>
   <li><a href="professional.html">film - professional</a></li>
@@ -66,13 +55,13 @@
   <li><a target="_blank" href="Ben Cowper | resume.pdf">resume</a></li>
   <li><a target="_blank" href="https://linkedin.com/in/bencowper">linkedin</a></li>
   <li><a target="_blank" href="https://vimeo.com/bencowper">vimeo</a></li>
-</ul>
+</div>
 
 <footer>All content Copyright Ben Cowper, 2017</footer>
 
 <body>
 
-<div style="margin-left:17%;">
+<div class="main">
 
 <a name="photography"></a>
 <hr color="#50A8AF">
@@ -92,16 +81,18 @@
     <img onmouseover="preview.src=Yellowstone.src" name="Yellowstone" src="images/Yellowstone.jpg" alt="Yellowstone"/>
   </div>
 <br>
-<div class="gallery" align="center">
-    <div class="preview" align="center">
+<div class="gallery">
+    <div class="preview">
     <img name="preview" src="images/Sunglasses.jpg" alt="Sunglasses"/>
   </div>
 <br><br>
+<div class="space">
 <p>
   Commercial and Art Photography
 <br><br>
   All photographs by Ben Cowper
 </p>
+</div>
 </div>
 
 <br><br>
