--- a/professional.html
+++ b/professional.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-  <!-- Global Site Tag (gtag.js) - Google Analytics -->
+<!-- Global Site Tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-106541861-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -39,13 +39,14 @@
 
 <style type="text/css">
   p {
-  margin-left: 12%;
-  margin-right: 12%;
+  text-align: center;
 }
+
 </style>
+
 </head>
 
-<ul>
+<div class="sidenav"> 
   <li><a href="me.html">me</a></li>
   <li><a href="personal.html">film - personal</a></li>
   <li><a class="active" href="professional.html">film - professional</a></li>
@@ -55,21 +56,23 @@
   <li><a target="_blank" href="Ben Cowper | resume.pdf">resume</a></li>
   <li><a target="_blank" href="https://linkedin.com/in/bencowper">linkedin</a></li>
   <li><a target="_blank" href="https://vimeo.com/bencowper">vimeo</a></li>
-</ul>
+</div>
 
 <footer>All content Copyright Ben Cowper, 2017</footer>
 
 <body>
 
-<div style="margin-left:17%;">
+<div class="main">
 
 <hr color="#50A8AF">
 <h2>Mount Holyoke Antique Clothing Collection (2016)</h2>
 <hr color="#50A8AF">
 <br>
+<div class="space">
+<div class="container">
+  <iframe src="https://player.vimeo.com/video/174029984?color=af5750&title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="video"></iframe>
+</div>
 
-<div align="center">
-  <iframe src="https://player.vimeo.com/video/174029984?color=af5750&title=0&byline=0&portrait=0" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <br><br>
 <p>
   TRT 4:05
@@ -88,8 +91,11 @@
 </h2>
 <hr color="#50A8AF">
 <br>
-<div align="center">
-  <iframe width="800" height="450" src="https://www.youtube.com/embed/hZtUYXg1Vdk?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+<div class="space">
+<div class="container">
+  <iframe src="https://www.youtube.com/embed/hZtUYXg1Vdk?rel=0&amp;showinfo=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="video"></iframe>
+</div>
+
 <br><br>
 <p>
   TRT 1:13
@@ -108,8 +114,11 @@
 </h2>
 <hr color="#50A8AF">
 <br>
-<div align="center">
-  <iframe src="https://player.vimeo.com/video/161136869?color=af5750&title=0&byline=0&portrait=0" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<div class="space">
+<div class="container">
+  <iframe src="https://player.vimeo.com/video/161136869?color=af5750&title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="video"></iframe>
+</div>
+
 <br><br>
 <p>
   15 episodes
@@ -132,8 +141,11 @@
 </h2>
 <hr color="#50A8AF">
 <br>
-<div align="center">
-  <iframe src="https://player.vimeo.com/video/163777798?color=af5750&title=0&byline=0&portrait=0" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<div class="space">
+<div class="container">
+  <iframe src="https://player.vimeo.com/video/163777798?color=af5750&title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="video"></iframe>
+</div>
+
 <br><br>
 <p>
   TRT 4:42 (loopable)
@@ -152,8 +164,11 @@
 </h2>
 <hr color="#50A8AF">
 <br>
-<div align="center">
-  <iframe src="https://player.vimeo.com/video/141407152?color=af5750&title=0&byline=0&portrait=0" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<div class="space">
+<div class="container">
+  <iframe src="https://player.vimeo.com/video/141407152?color=af5750&title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="video"></iframe>
+</div>
+
 <br><br>
 <p>
   TRT 2:19
@@ -171,8 +186,11 @@
 </h2>
 <hr color="#50A8AF">
 <br>
-<div align="center">
-  <iframe width="800" height="450" src="https://www.youtube.com/embed/zZ6LzERAsxE?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+<div class="space">
+<div class="container">
+  <iframe src="https://www.youtube.com/embed/zZ6LzERAsxE?rel=0&amp;showinfo=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="video"></iframe>
+</div>
+
 <br><br>
 <p>
   TRT 1:05
@@ -191,8 +209,11 @@
 </h2>
 <hr color="#50A8AF">
 <br>
-<div align="center">
-  <iframe src="https://player.vimeo.com/video/111631355?color=af5750&title=0&byline=0&portrait=0" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<div class="space">
+<div class="container">
+  <iframe src="https://player.vimeo.com/video/111631355?color=af5750&title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="video"></iframe>
+</div>
+
 <br><br>
 <p>
   TRT 1:00
@@ -207,30 +228,15 @@
 
 <hr color="#50A8AF">
 <h2>
-  Northampton Chamber of Commerce (2015)
-</h2>
-<hr color="#50A8AF">
-<br>
-<div align="center">
-  <img src="images/NHCC.jpg" alt="Northampton Chamber of Commerce" height="auto" width="800px">
-<br><br>
-<p>
-  cinematographer, editor
-<br><br>
-  Various promotional videos for the Northampton Chamber of Commerce.
-</p>
-</div>
-
-<br><br>
-
-<hr color="#50A8AF">
-<h2>
   San Francisco Frozen Film Festival Promo (2014)
 </h2>
 <hr color="#50A8AF">
 <br>
-<div align="center">
-  <iframe src="https://player.vimeo.com/video/100529655?color=af5750&title=0&byline=0&portrait=0" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<div class="space">
+<div class="container">
+  <iframe src="https://player.vimeo.com/video/100529655?color=af5750&title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="video"></iframe>
+</div>
+
 <br><br>
 <p>
   TRT 0:15
@@ -249,8 +255,11 @@
 </h2>
 <hr color="#50A8AF">
 <br>
-<div align="center">
-  <iframe src="https://player.vimeo.com/video/131499249?color=af5750&title=0&byline=0&portrait=0" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<div class="space">
+<div class="container">
+  <iframe src="https://player.vimeo.com/video/131499249?color=af5750&title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="video"></iframe>
+</div>
+
 <br><br>
 <p>
   TRT 0:10
@@ -269,8 +278,11 @@
 </h2>
 <hr color="#50A8AF">
 <br>
-<div align="center">
-  <iframe width="800" height="450" src="https://www.youtube.com/embed/MVdcUx2cxsQ?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+<div class="space">
+<div class="container">
+  <iframe src="https://www.youtube.com/embed/MVdcUx2cxsQ?rel=0&amp;showinfo=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="video"></iframe>
+</div>
+
 <br><br>
 <p>
   TRT 10:35
