--- a/personal.html
+++ b/personal.html
@@ -69,11 +69,11 @@ p {
 <br>
 <div class="space">
 <div class="container">
-  <iframe src="https://player.vimeo.com/video/174029936?color=af5750&title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="video"></iframe>  
+  <iframe src="https://player.vimeo.com/video/174029936?color=af5750&title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="video"></iframe><!--   
   <iframe src="https://player.vimeo.com/video/165776517?color=af5750&title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="video"></iframe>
 <br>
   <iframe src="https://player.vimeo.com/video/174029854?color=af5750&title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="video"></iframe>
-  <iframe src="https://player.vimeo.com/video/165776508?color=af5750&title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="video"></iframe>
+  <iframe src="https://player.vimeo.com/video/165776508?color=af5750&title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="video"></iframe> -->
 </div>
 
 <br><br>
