--- a/demo-reel.html
+++ b/demo-reel.html
@@ -12,7 +12,7 @@
   gtag('config', 'UA-106541861-1');
 </script>
 
-<title>Ben Cowper | photography</title>
+<title>Ben Cowper | reel</title>
 <link rel="stylesheet" href="styles.css">
 <link rel="author" href="humans.txt" />
 
@@ -38,20 +38,21 @@
 <meta name="msapplication-config" content="icons/browserconfig.xml">
 
 <style type="text/css">
-p {
+  p {
   text-align: center;
 }
+
 </style>
 
 </head>
 
 <div class="sidenav"> 
-  <li><a href="me.html">me</a></li>
-  <li><a href="personal.html">film - personal</a></li>
-  <li><a href="professional.html">film - professional</a></li>
-  <li><a href="reel.html">reel</a></li>
-  <li><a href="tvstudio.html">tv studio renovation</a></li>
-  <li><a class="active" href="photo.html">photography</a></li>
+  <li><a href="ben-cowper-about.html">me</a></li>
+  <li><a href="personal-film-portfolio.html">film - personal</a></li>
+  <li><a href="professional-film-portfolio.html">film - professional</a></li>
+  <li><a class="active" href="demo-reel.html">reel</a></li>
+  <li><a href="tv-studio-renovation.html">tv studio renovation</a></li>
+  <li><a href="photography-portfolio.html">photography</a></li>
   <li><a target="_blank" href="Ben Cowper | resume.pdf">resume</a></li>
   <li><a target="_blank" href="https://linkedin.com/in/bencowper">linkedin</a></li>
   <li><a target="_blank" href="https://vimeo.com/bencowper">vimeo</a></li>
@@ -63,36 +64,18 @@ p {
 
 <div class="main">
 
-<a name="photography"></a>
 <hr color="#50A8AF">
-<h2>Photography</h2>
+<h2>Cinematography & Editing Reel (2016)</h2>
 <hr color="#50A8AF">
 <br>
-
-  <div class="thumbnails" align="center">
-    <img onmouseover="preview.src=Sunglasses.src" name="Sunglasses" src="images/Sunglasses.jpg" alt="Sunglasses"/>
-    <img onmouseover="preview.src=Snowflake.src" name="Snowflake" src="images/Snowflake.jpg" alt="Snowflakes"/>
-    <img onmouseover="preview.src=SanFrancisco.src" name="SanFrancisco" src="images/SanFrancisco.jpg" alt="San Francisco"/>
-    <img onmouseover="preview.src=RedBarn.src" name="RedBarn" src="images/RedBarn.jpg" alt="Red Barn Event"/>
-    <img onmouseover="preview.src=Moon.src" name="Moon" src="images/Moon.jpg" alt="Moon"/>
-    <img onmouseover="preview.src=Mountain.src" name="Mountain" src="images/Mountain.jpg" alt="Montana Mountain"/>
-    <img onmouseover="preview.src=Boat.src" name="Boat" src="images/Boat.jpg" alt="Middletown Boat"/>
-    <img onmouseover="preview.src=Squam.src" name="Squam" src="images/Squam.jpg" alt="Squam Lake"/>
-    <img onmouseover="preview.src=Yellowstone.src" name="Yellowstone" src="images/Yellowstone.jpg" alt="Yellowstone"/>
-  </div>
-<br>
-<div class="gallery">
-    <div class="preview">
-    <img name="preview" src="images/Sunglasses.jpg" alt="Sunglasses"/>
-  </div>
-<br><br>
 <div class="space">
-<p>
-  Commercial and Art Photography
-<br><br>
-  All photographs by Ben Cowper
-</p>
+<div class="container">
+	<iframe src="https://player.vimeo.com/video/87645149?color=af5750&title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="video"></iframe>
 </div>
+<br><br>
+<p>
+	All clips photographed and edited by Ben Cowper
+</p>
 </div>
 
 <br><br>
