--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@ html {
 </head>
 
 <div class="sidenav"> 
-  <li><a href="me.html">me</a></li>
-  <li><a href="personal.html">film - personal</a></li>
-  <li><a href="professional.html">film - professional</a></li>
-  <li><a href="reel.html">reel</a></li>
-  <li><a href="tvstudio.html">tv studio renovation</a></li>
-  <li><a href="photo.html">photography</a></li>
+  <li><a href="ben-cowper-about.html">me</a></li>
+  <li><a href="personal-film-portfolio.html">film - personal</a></li>
+  <li><a href="professional-film-portfolio.html">film - professional</a></li>
+  <li><a href="demo-reel.html">reel</a></li>
+  <li><a href="tv-studio-renovation.html">tv studio renovation</a></li>
+  <li><a href="photography-portfolio.html">photography</a></li>
   <li><a target="_blank" href="Ben Cowper | resume.pdf">resume</a></li>
   <li><a target="_blank" href="https://linkedin.com/in/bencowper">linkedin</a></li>
   <li><a target="_blank" href="https://vimeo.com/bencowper">vimeo</a></li>
