--- a/personal-film-portfolio.html
+++ b/personal-film-portfolio.html
@@ -2,7 +2,6 @@
 <html>
 <head>
 
-<!-- Global Site Tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-106541861-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -46,12 +45,12 @@ p {
 </head>
 
 <div class="sidenav"> 
-  <li><a href="me.html">me</a></li>
-  <li><a class="active" href="personal.html">film - personal</a></li>
-  <li><a href="professional.html">film - professional</a></li>
-  <li><a href="reel.html">reel</a></li>
-  <li><a href="tvstudio.html">tv studio renovation</a></li>
-  <li><a href="photo.html">photography</a></li>
+  <li><a href="ben-cowper-about.html">me</a></li>
+  <li><a class="active" href="personal-film-portfolio.html">film - personal</a></li>
+  <li><a href="professional-film-portfolio.html">film - professional</a></li>
+  <li><a href="demo-reel.html">reel</a></li>
+  <li><a href="tv-studio-renovation.html">tv studio renovation</a></li>
+  <li><a href="photography-portfolio.html">photography</a></li>
   <li><a target="_blank" href="Ben Cowper | resume.pdf">resume</a></li>
   <li><a target="_blank" href="https://linkedin.com/in/bencowper">linkedin</a></li>
   <li><a target="_blank" href="https://vimeo.com/bencowper">vimeo</a></li>
