page titles, redirect

--- a/demo-reel.html
+++ b/demo-reel.html
@@ -12,7 +12,7 @@
   gtag('config', 'UA-106541861-1');
 </script>
 
-<title>Ben Cowper | reel</title>
+<title>Cinematography and Editing Demo Reel | Ben Cowper</title>
 <link rel="stylesheet" href="styles.css">
 <link rel="author" href="humans.txt" />
 
