--- a/professional-film-portfolio.html
+++ b/professional-film-portfolio.html
@@ -12,7 +12,7 @@
   gtag('config', 'UA-106541861-1');
 </script>
 
-<title>Ben Cowper | professional</title>
+<title>Professional Film Portfolio | Ben Cowper - Filmmaker, Educator, Artist</title>
 <link rel="stylesheet" href="styles.css">
 <link rel="author" href="humans.txt" />
 
