--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   gtag('config', 'UA-106541861-1');
 </script>
 
-<title>Ben Cowper | home</title>
+<title>Filmmaker, Educator, Artist | Home - Ben Cowper</title>
 <link rel="stylesheet" href="styles.css">
 <link rel="author" href="humans.txt" />
 
