--- a/me.html
+++ b/me.html
@@ -1,214 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-
-<!-- Global Site Tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-106541861-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments)};
-  gtag('js', new Date());
-
-  gtag('config', 'UA-106541861-1');
-</script>
-
-<title>Ben Cowper | me</title>
-<link rel="stylesheet" href="styles.css">
-<link rel="author" href="humans.txt" />
-
-<link rel="shortcut icon" href="icons/favicon.ico">
-<link rel="icon" sizes="16x16 32x32 64x64" href="icons/favicon.ico">
-<link rel="icon" type="image/png" sizes="196x196" href="icons/favicon-192.png">
-<link rel="icon" type="image/png" sizes="160x160" href="icons/favicon-160.png">
-<link rel="icon" type="image/png" sizes="96x96" href="icons/favicon-96.png">
-<link rel="icon" type="image/png" sizes="64x64" href="icons/favicon-64.png">
-<link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16.png">
-<link rel="apple-touch-icon" href="icons/favicon-57.png">
-<link rel="apple-touch-icon" sizes="114x114" href="icons/favicon-114.png">
-<link rel="apple-touch-icon" sizes="72x72" href="icons/favicon-72.png">
-<link rel="apple-touch-icon" sizes="144x144" href="icons/favicon-144.png">
-<link rel="apple-touch-icon" sizes="60x60" href="icons/favicon-60.png">
-<link rel="apple-touch-icon" sizes="120x120" href="icons/favicon-120.png">
-<link rel="apple-touch-icon" sizes="76x76" href="icons/favicon-76.png">
-<link rel="apple-touch-icon" sizes="152x152" href="icons/favicon-152.png">
-<link rel="apple-touch-icon" sizes="180x180" href="icons/favicon-180.png">
-<meta name="msapplication-TileColor" content="#FFFFFF">
-<meta name="msapplication-TileImage" content="icons/favicon-144.png">
-<meta name="msapplication-config" content="icons/browserconfig.xml">
-
-<style type="text/css">
-.preview img {
-  width: 30%;
-}
-</style>
-
+<meta HTTP-EQUIV="REFRESH" content="0; url=http://bcowper.com/ben-cowper-about.html">
 </head>
-
-<div class="sidenav"> 
-  <li><a class="active" href="ben-cowper-about.html">me</a></li>
-  <li><a href="personal-film-portfolio.html">film - personal</a></li>
-  <li><a href="professional-film-portfolio.html">film - professional</a></li>
-  <li><a href="demo-reel.html">reel</a></li>
-  <li><a href="tv-studio-renovation.html">tv studio renovation</a></li>
-  <li><a href="photography-portfolio.html">photography</a></li>
-  <li><a target="_blank" href="Ben Cowper | resume.pdf">resume</a></li>
-  <li><a target="_blank" href="https://linkedin.com/in/bencowper">linkedin</a></li>
-  <li><a target="_blank" href="https://vimeo.com/bencowper">vimeo</a></li>
-</div>
-
-<footer>All content Copyright Ben Cowper, 2017</footer>
-
-<body>
-
-<div class="main">
-
-<hr color="#50A8AF">
-<h2>Ben Cowper</h2>
-<h3>cowpervideos@gmail.com</h3>
-<hr color="#50A8AF">
-<br>
-
-<div class="gallery">
- <div class="preview">
-  <img name="preview" src="images/Ben_Cowper.jpg" alt="Ben Cowper"/>
- </div>
-</div>
-
-<br>
-
-<div style="margin-left: 3%; margin-right: 3%;">
-
-<p>
-In 2016 I received a Bachelor of Arts in Cinematography and Editing from Hampshire College. I have always loved working with video, and began producing professional work as early as 2007. Since then, I have filmed and edited over 100 projects for a wide variety of individuals, artists, and commercial clients including: Yale University, Hampshire College, Mount Holyoke College, PBS <i>American Masters</i>, Cambridge University Press, ServiceNet, Northampton Chamber of Commerce, Beehive Sewing, and the Global Fibrosis Foundation.
-
-<br><br>
-
-I am highly skilled in the following roles:
-<br><br>
-  <b>Cinematographer</b>
-  DSLR (5DmkIII with Magic Lantern), Blackmagic, Canon C100, GoPro, 16mm Bolex, Super 8
-<br><br>
-  <b>Editor, Colorist</b>
-  Adobe Premiere, After Effects, Photoshop, Final Cut Pro, DaVinci Resolve
-<br><br>
-  <b>Audio Engineer</b>
-  5.1 surround and stereo recording/mixing: ProTools, Audition, Logic
-<br><br>
-  <b>Web Design, Coding</b>
-  Python, HTML, CSS, LATEX, Arduino, Apple, Google, Microsoft, Squarespace, Wordpress
-<br><br>
-  <b>Lighting Designer</b>
-  Designing and drawing lighting plots for film and theatre productions
-<br><br>
-  <b>Photographer</b>
-  Digital, 35mm, medium format, and large format
-<br><br>
-  <b>Archivist</b>
-  Digitally transferring and preserving archaic media formats
-<br><br>
-  <b>Live Streaming</b>
-  Installation and live switching of audio and video streams for television, theatre, and conferences
-</p>
-
-</div>
-
-<br>
-
-<hr color="#af5750">
-
-<div class="columns">
-
-	<div class="column">
-		<h3>Film</h3>
-		<h4>Holding Hands with Ilse (2017)</h4>
-		<p>Subtitling, Audio Mixing, Post Production Assistant</p>
-  	
-	  	<h4>Becoming Helen Keller (2016)</h4>
-		<p>Post Production Assistant, Digital Marketing - PBS <i>American Masters</i> documentary</p>
-
-		<h4><a href="/personal.html#nona">Nona (2016)</a></h4>
-		<p>Director, Cinematographer, Editor - My thesis film at Hampshire College</p>
-
-		<h4><a target="_blank" href="https://vimeo.com/140096300">Darkville (2015 - 2016)</a></h4>
-		<p>Director of Photography (2 episodes) - Channel 101 show screened at UCB Theatre in New York</p>
-
-	  	<h4><a target="_blank" href="http://shanghaiquartetfilm.com">The Shanghai String Quartet (2016)</a></h4>
-		<p>Production Assistant - Audio recording for documentary film</p>
-
-	  	<h4><a href="/personal.html#somethingrestless">Something Restless (2015)</a></h4>
-		<p>Technical Director, 5.1 audio mix engineer - Friend's thesis film at Hampshire College</p>
-
-		<h4><a href="/personal.html#hazardlights">Hazard Lights (2014)</a></h4>
-		<p>Assistant Director - Friend's thesis film at Hampshire College</p>
-
-		<h4><a target="_blank" href="https://www.youtube.com/watch?v=0iOustk_6WY">The Games We Play (2014)</a></h4>
-		<p>Camera Operator - Friend's thesis film at Hampshire College</p>
-	</div>
-
-	<div class="column">
-		<h3>Teaching</h3>
-		<h4>Media Alumni Fellow (2017)
-		<br>
-		Hampshire College</h4>
-		<p>Served as the primary resource for faculty and students needing media production assistance, put together instructional videos and guides for equipment, led workshops, and lectured on color grading and video editing</p>
-
-		<h4>Guest Instructor (2016)
-		<br>
-		Amherst College</h4>
-		<p>FAMS-228: Super 8 Film and Digital Video</p>
-
-		<h4>Assistant Instructor (2015 - 2016)
-		<br>
-		Creative Media Institute</h4>
-		<p>Summer film program, 2 years</p>
-
-		<h4>Teaching Assistant (2014 - 2016)
-		<br>
-		Hampshire College</h4>
-		<p>HACU-0287: Performance & Directing
-		<br>
-		HACU-0209: Video 1
-		<br>
-		NS-0254: Science Fiction Film</p>
-
-		<h4>Instructor (2014)
-		<br>
-		Hampshire College</h4>
-		<p>Video Production Collective: I created and taught a college level video production course completed by 12 students, for which they received academic credit</p>
-
-		<h4>Teaching Assistant (2012)
-		<br>
-		Kingswood Oxford</h4>
-		<p>Advanced Digital Video</p>
-    </div>
-
-	<div class="column">
-		<h3>Web, Graphics, Coding</h3>
-		<h4><a target="_blank" href="https://www.becominghelenkeller.org">Becoming Helen Keller</a></h4>
-		<p>Web Design, Graphics - Squarespace, CSS, HTML, Photoshop</p>
-		<h4><a target="_blank" href="https://www.beehivesewing.com">Beehive Sewing</a></h4>
-		<p>Site map, Layout - Wordpress</p>
-		<h4><a target="_blank" href="http://globalfibrosis.org/">The Global Fibrosis Foundation</a></h4>
-		<p>Web Design, Graphics - Squarespace, CSS, HTML, Illustrator</p>
-
-		<br>
-
-		<h3>Awards, Grants, Certifications</h3>
-		<h4>Tom Joslin Grant (2016)</h4>
-		<p>Received funding for my thesis film <i>Nona</i> at Hampshire College</p>
-		<h4>Teaching Assistant Certificate (2015)</h4>
-		<p>Completed seminar in teaching</p>
-		<h4>Green Prize (2012)</h4>
-		<p>Awarded for excellence in dramatics at Kingswood Oxford</p>
-		<h4>Williston-Northampton Film Festival (2012)</h4>
-		<p>Director of a short film screened at the festival</p>
-	</div>
-
-</div>
-
-<br><br>
-
-</div>
-</body>
 </html>
