--- a/personal-film-portfolio.html
+++ b/personal-film-portfolio.html
@@ -11,7 +11,7 @@
   gtag('config', 'UA-106541861-1');
 </script>
 
-<title>Ben Cowper | film</title>
+<title>Personal Film Portfolio | Ben Cowper - Filmmaker, Educator, Artist</title>
 <link rel="stylesheet" href="styles.css">
 <link rel="author" href="humans.txt" />
 
