--- a/photography-portfolio.html
+++ b/photography-portfolio.html
@@ -12,7 +12,7 @@
   gtag('config', 'UA-106541861-1');
 </script>
 
-<title>Ben Cowper | photography</title>
+<title>Photography Portfolio | Ben Cowper - Filmmaker, Educator, Artist</title>
 <link rel="stylesheet" href="styles.css">
 <link rel="author" href="humans.txt" />
 
