--- a/tv-studio-renovation.html
+++ b/tv-studio-renovation.html
@@ -12,7 +12,7 @@
   gtag('config', 'UA-106541861-1');
 </script>
 
-<title>Ben Cowper | TV Studio Renovation</title>
+<title>TV Studio Renovation | Ben Cowper - Filmmaker, Educator, Artist</title>
 <link rel="stylesheet" href="styles.css">
 <link rel="author" href="humans.txt" />
 
