--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ html {
 
 <div class="gallery">
  <div class="preview">
-  <a href="me.html"><img name="preview" src="images/Snowflake.jpg" alt="Snowflake"/></a>
+  <a href="ben-cowper-about.html"><img name="preview" src="images/Snowflake.jpg" alt="Snowflake"/></a>
  </div>
 </div>
 
