--- a/photography-portfolio.html
+++ b/photography-portfolio.html
@@ -13,7 +13,7 @@
 </script>
 
 <title>Photography Portfolio | Ben Cowper - Filmmaker, Educator, Artist</title>
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" type="text/css" href="styles.css">
 <link rel="author" href="humans.txt" />
 
 <link rel="shortcut icon" href="icons/favicon.ico">
