--- a/me.html
+++ b/me.html
@@ -3,4 +3,18 @@
 <head>
 <meta HTTP-EQUIV="REFRESH" content="0; url=http://bcowper.com/ben-cowper-about.html">
 </head>
+<body>
+
+<h2>Redirecting</h2>
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-106541861-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments)};
+  gtag('js', new Date());
+
+  gtag('config', 'UA-106541861-1');
+</script>
+
+</body>
 </html>
