--- a/ben-cowper-about.html
+++ b/ben-cowper-about.html
@@ -59,10 +59,8 @@
 <hr color="#50A8AF">
 <br>
 
-<div class="gallery">
- <div class="preview">
-  <img name="preview" src="images/Ben_Cowper.jpg" alt="Ben Cowper"/>
- </div>
+<div class="preview" style="text-align: center;">
+  <img src="images/Ben_Cowper.jpg" alt="Ben Cowper"/>
 </div>
 
 <br>
