--- a/ben-cowper-about.html
+++ b/ben-cowper-about.html
@@ -27,10 +27,11 @@
 <meta name="msapplication-TileImage" content="icons/favicon-144.png">
 <meta name="msapplication-config" content="icons/browserconfig.xml">
 
-<!-- <style type="text/css">
+<style type="text/css">
 .preview img {
+  width: 30%;
 }
-</style> -->
+</style>
 
 </head>
 
@@ -58,8 +59,10 @@
 <hr color="#50A8AF">
 <br>
 
-<div style="text-align: center;">
-  <img src="images/Ben_Cowper.jpg" alt="Ben Cowper" style="width: 30%;">
+<div class="gallery">
+ <div class="preview">
+  <img name="preview" src="images/Ben_Cowper.jpg" alt="Ben Cowper">
+ </div>
 </div>
 
 <br>
