--- a/personal-film-portfolio.html
+++ b/personal-film-portfolio.html
@@ -59,11 +59,13 @@ p {
 <br>
 <div class="space">
 <div class="container">
-	<iframe src="https://player.vimeo.com/video/174029936?loop=1&color=af5750&title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="video"></iframe>
+	<iframe src="https://player.vimeo.com/video/174029936?&loop=1&color=af5750&title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="video"></iframe>
 </div>
 
 <br><br>
 <p>
+  TRT &#8734;
+<br><br>
   director, editor, cinematographer, performer
 <br><br>
   A series of experimental short films about people.
