--- a/professional-film-portfolio.html
+++ b/professional-film-portfolio.html
@@ -133,12 +133,12 @@
 <br>
 <div class="space">
 <div class="container">
-  <iframe src="https://player.vimeo.com/video/163777798?color=af5750&title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="video"></iframe>
+  <iframe src="https://player.vimeo.com/video/163777798??&color=af5750&title=0&byline=0&portrait=0&loop=1" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="video"></iframe>
 </div>
 
 <br><br>
 <p>
-  TRT 4:42 (loopable)
+  TRT &#8734;
 <br><br>
   director, editor, cinematographer
 <br><br>
