--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 
 <title>Filmmaker, Educator, Artist | Home - Ben Cowper</title>
-<link rel="stylesheet" type="text/css" href="styles.css">
+<link rel="stylesheet" type="text/css" href="styles.css" />
+<link rel="stylesheet" type="text/css" media="only screen and (max-width: 480px), only screen and (max-device-width: 480px)" href="mobile.css" />
 <link rel="author" href="humans.txt" />
 
 <link rel="shortcut icon" href="icons/favicon.ico">
