--- a/ben-cowper-about.html
+++ b/ben-cowper-about.html
@@ -4,6 +4,14 @@
 
 <title>Filmmaker, Educator, Artist | About Me - Ben Cowper</title>
 <link rel="stylesheet" type="text/css" href="styles.css">
+
+<style type="text/css">
+.preview img {
+  width: 30%;
+}
+</style>
+
+<link rel="stylesheet" type="text/css" media="only screen and (max-width: 480px), only screen and (max-device-width: 480px)" href="mobile.css" />
 <link rel="author" href="humans.txt" />
 
 <link rel="shortcut icon" href="icons/favicon.ico">
@@ -26,12 +34,6 @@
 <meta name="msapplication-TileColor" content="#FFFFFF">
 <meta name="msapplication-TileImage" content="icons/favicon-144.png">
 <meta name="msapplication-config" content="icons/browserconfig.xml">
-
-<style type="text/css">
-.preview img {
-  width: 30%;
-}
-</style>
 
 </head>
 
