--- a/index.html
+++ b/index.html
@@ -29,12 +29,8 @@
 <meta name="msapplication-config" content="icons/browserconfig.xml">
 
 <style type="text/css">
-h2 {
-    color: white;
-}
-
 body {
-    background-color: #000000;
+  background-color: #000000;
 }
 
 html {
@@ -42,9 +38,20 @@ html {
 }
 </style>
 
+<script type="text/javascript">
+function toggle(Collapse) {
+  var CState = document.getElementById(Collapse);
+  CState.style.display = (CState.style.display != 'block') ? 'block' : 'none';
+}
+</script>
+
 </head>
 
-<div class="sidenav"> 
+<div class="mobilenav" onclick="toggle('menu')">
+      <h3 style="text-align: left; color: white; margin: 1em; padding: 0; border: 0;">menu</h3>
+</div>
+
+<div class="sidenav" id="menu"> 
   <li><a href="ben-cowper-about.html">me</a></li>
   <li><a href="personal-film-portfolio.html">film - personal</a></li>
   <li><a href="professional-film-portfolio.html">film - professional</a></li>
@@ -63,7 +70,7 @@ html {
 <div class="main">
 
 <hr color="#50A8AF">
-<h2>Ben Cowper</h2>
+<h2 style="color: white;">Ben Cowper</h2>
 <hr color="#50A8AF">
 <br>
 
